Remove second closing head tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700|PT+Serif:400,400i,700" rel="stylesheet">
 </head>
-</head>
 <body>
   <header>
     <h1>Beetroot (Beta vulgaris)</h1>
@@ -40,7 +39,7 @@
 
   <h2>Common varities</h2>
 
-  <ul>
+  <ul class="varities">
     <li>Albino</li>
     <li>Bull's Blood</li>
     <li>Chioggia</li>
